# Sahayata-Ai-banking-assistant

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  PROGRESS.md  README.md  architecture-animated.html  architecture-clear-flow.html  index.html  package-lock.json  package.json  plan.md  vite.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-api.yml
api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
api/app/: __init__.py  __main__.py  config.py  logging_config.py  main.py  rate_limit.py
api/app/db/: __init__.py  database.py  repository.py
api/app/models/: health.py  turn.py
api/app/providers/: __init__.py  base.py  factory.py  fakes.py  sarvam.py
api/app/routers/: banking_processes.py  conversations.py  health.py
api/app/services/: __init__.py  audio_validation.py  banking_knowledge.py  conversation_gateway.py  conversation_store.py  turn_service.py
api/tests/: conftest.py  test_audio_validation.py  test_dashboard.py  test_health.py  test_turn_pipeline.py
docs/: architecture.md  demo-script.md  security.md
src/: App.jsx
src/components/: BankLogo.jsx  DashboardPanel.jsx  FloatingAssistButton.jsx  LanguageSelector.jsx  PhoneMockup.jsx  ProductCard.jsx
src/data/: mockData.js
src/routes/: BranchAssistPage.jsx  HomePage.jsx
src/services/: elevenlabs.js
src/styles/: index.css
supabase/: README.md  seed.sql
supabase/migrations/: 0001_initial_schema.sql  0002_rls_policies.sql
web/: .env.example  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
(+8 files in other folders)
